--- a/Resources/Layout/HomeScreen.axml
+++ b/Resources/Layout/HomeScreen.axml
@@ -21,8 +21,7 @@
   <ListView android:id="@+id/List"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:cacheColorHint="#FFDAFF7F"
-	/>
+    android:cacheColorHint="#FFDAFF7F"/>
 
 
 </LinearLayout>
